--- a/BilickyDaliborSP/BilickyDaliborSP.vcxproj
+++ b/BilickyDaliborSP/BilickyDaliborSP.vcxproj
@@ -130,6 +130,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Menu.cpp" />
     <ClCompile Include="src\Algorithms.cpp" />
     <ClCompile Include="src\Region.cpp" />
     <ClCompile Include="src\Settlement.cpp" />
@@ -142,6 +143,7 @@
     <None Include="res\CR_win1250.csv" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Menu.h" />
     <ClInclude Include="src\Algorithms.h" />
     <ClInclude Include="src\Region.h" />
     <ClInclude Include="src\Settlement.h" />
