--- a/BilickyDaliborSP/BilickyDaliborSP.vcxproj
+++ b/BilickyDaliborSP/BilickyDaliborSP.vcxproj
@@ -130,25 +130,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="src\menu.cpp" />
+    <ClCompile Include="src\menu\states.cpp" />
+    <ClCompile Include="src\menu\prompt.cpp" />
+    <ClCompile Include="src\menu\current_state.cpp" />
     <ClCompile Include="src\algorithms.cpp" />
-    <ClCompile Include="src\units\region.cpp" />
-    <ClCompile Include="src\units\settlement.cpp" />
-    <ClCompile Include="src\units\soorp.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\units\territorial_unit.cpp" />
+    <ClCompile Include="src\units\units.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="res\CR.csv" />
     <None Include="res\CR_win1250.csv" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\menu.h" />
+    <ClInclude Include="src\menu\states.h" />
+    <ClInclude Include="src\menu\prompt.h" />
+    <ClInclude Include="src\menu\current_state.h" />
     <ClInclude Include="src\algorithms.h" />
-    <ClInclude Include="src\units\region.h" />
-    <ClInclude Include="src\units\settlement.h" />
-    <ClInclude Include="src\units\soorp.h" />
     <ClInclude Include="src\units\territorial_unit.h" />
+    <ClInclude Include="src\units\units.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
