--- a/BilickyDaliborSP/BilickyDaliborSP.vcxproj.filters
+++ b/BilickyDaliborSP/BilickyDaliborSP.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\units\units.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\app.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\CR_win1250.csv" />
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\units\units.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\app.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
