--- a/BilickyDaliborSP/BilickyDaliborSP.vcxproj
+++ b/BilickyDaliborSP/BilickyDaliborSP.vcxproj
@@ -130,6 +130,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\manual_iterator.cpp" />
     <ClCompile Include="src\app.cpp" />
     <ClCompile Include="src\menu\states.cpp" />
     <ClCompile Include="src\menu\prompt.cpp" />
@@ -143,6 +144,7 @@
     <None Include="res\CR_win1250.csv" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\manual_iterator.h" />
     <ClInclude Include="src\app.h" />
     <ClInclude Include="src\menu\states.h" />
     <ClInclude Include="src\menu\prompt.h" />
