--- a/BilickyDaliborSP/BilickyDaliborSP.vcxproj.filters
+++ b/BilickyDaliborSP/BilickyDaliborSP.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="src\manual_iterator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\ds_handler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="res\CR_win1250.csv" />
@@ -69,6 +72,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\manual_iterator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\ds_handler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
